# tui-vna

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASE.md  pyproject.toml  run_tina.py
.github/workflows/: bump-version.yml  release.yml  test.yml
.sisyphus/evidence/: task-2-import-audit.txt  task-2-import-regression.txt  task-3-api-surface-tests.txt  task-3-static-audit.txt
.zed/: tasks.json
docs/: sample.s2p
scripts/: README.md  build.bat  build.fish  build.sh  debug_alignment.py  extrema_synthesis.py  extrema_tune.py  lint.sh  runtime_hook_quick.py  screenshot.py  test.sh  tina-quick.spec  tina.spec
src/tina/: __init__.py  _loader.py  main.py  quick_measure.py  touchstone.py  vna.py  worker.py
src/tina/cli/: __init__.py  parser.py  plotting.py  runner.py
src/tina/config/: __init__.py  constants.py  migration.py  settings.py
src/tina/drivers/: README.md  __init__.py  base.py  hp_e5071b.py  keysight_p5007a.py  scpi_commands.py
src/tina/export/: __init__.py  csv.py  image_metadata.py  templates.py
src/tina/gui/: __init__.py  app.py  styles.tcss  theme.py
src/tina/gui/components/: __init__.py  autocomplete.py  frequency_entry.py  status_footer.py
src/tina/gui/mixins/: __init__.py  _compat.py  _types.py  background_jobs.py  import_export.py  notes.py  results_plot.py  setup_state.py  tools_tab.py  worker_messages.py
src/tina/gui/modals/: __init__.py  help.py  update_notification.py
src/tina/gui/plotting/: __init__.py  colors.py  renderers.py  utils.py
src/tina/gui/providers/: __init__.py  command_palette.py
src/tina/gui/styles/: core.tcss  (+8 more)
src/tina/help/: cursor.md  distortion.md  output.md
src/tina/tools/: __init__.py  base.py  distortion.py  measure.py
src/tina/utils/: __init__.py  colors.py  logging_wrapper.py  paths.py  plotting.py  signal.py  terminal.py  touchstone.py  update_checker.py
tests/: README.md  __init__.py  conftest.py  test_autocomplete.py  test_command_palette.py  test_csv_export.py  test_distortion_cache.py  test_distortion_tool.py  test_edge_cases.py  test_export_templates.py  test_extrema_cache.py  test_help.py  test_image_metadata.py  test_measurement_exports.py  test_measurement_notes.py  test_package_exports.py  test_plot_colors.py  test_scipy_fallback.py  test_tools_result_formatting.py  test_update_checker.py  test_worker.py
tests/cli/: test_parser.py  test_plotting.py  test_runner.py
tests/config/: test_constants.py  test_migration.py  test_settings.py
tests/drivers/: test_base.py  test_hp_e5071b.py  test_keysight_p5007a.py
tests/fixtures/: __init__.py  mock_visa.py  mock_vna.py  sample_data.py  test_mock_visa.py  test_sample_data.py
tests/gui/components/: test_background_jobs.py  test_query_exception_narrowing.py
tests/gui/tabs/: test_log_logic.py  test_log_tab.py  test_tools_logic.py  test_tools_tab.py
tests/utils/: _compat.py  test_colors.py  test_logging_wrapper.py  test_paths.py  test_renderers.py  test_signal.py  test_status_footer.py  test_touchstone.py  test_update_checker.py
(+8 files in other folders)
