[project]
name = "tui-vna"
version = "0.0.1"
description = "tina - Terminal UI Network Analyzer"
requires-python = ">=3.10"
dependencies = [
    "pyvisa>=1.14.0",
    "pyvisa-py>=0.7.0",
    "numpy>=1.24.0",
    "textual>=0.47.0",
    "textual-plotext>=0.2.1",
    "textual-image>=0.8.0",
    "pygments>=2.19.2",
    "matplotlib>=3.7.0",
    "scikit-rf>=0.30.0",
]
authors = [
    {name = "tina", email = "tina@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tina = "tina.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tina"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
