[project]
name = "tui-vna"
version = "0.1.2"
description = "tina - Terminal UI Network Analyzer"
requires-python = ">=3.10"
dependencies = [
    "pyvisa>=1.14.0",
    "pyvisa-py>=0.7.0",
    "numpy>=1.24.0",
    "textual>=0.47.0",
    "textual-plotext>=0.2.1",
    "textual-image>=0.8.0",
    "pygments>=2.19.2",
    "matplotlib>=3.7.0",
    "scikit-rf>=0.30.0",
]
authors = [
    {name = "tina", email = "tina@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tina = "tina.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tina"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
]
lint = [
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/tina",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests that don't require hardware",
    "integration: Integration tests with dummy instruments",
    "slow: Slow-running tests",
]
timeout = 30

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.coverage.run]
source = ["src/tina"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
